--- a/css/style.css
+++ b/css/style.css
@@ -360,7 +360,7 @@ button {
     float: left;
     background-color: #000000;
     font-size: 17px;
-    color: #ffffff;
+    color: #ffffff; 
     height: 50px;
     font-weight: 700;
     padding-top: 5px;
@@ -404,15 +404,18 @@ button {
 
 }
 .about_bt {
-    width: 25%;
+    width: 40%;
     float: left;
     background-color: #ffffff;
     color: #000000;
     text-align: center;
-    font-size: 14px;
+    font-size: 17px;
+    font-weight: 700; 
     height: 50px;
     margin-left: 20px;
-    margin-top: 50px;	
+    margin-top: 5px;
+    padding-top: 5px;	
+        
 }
 
 .table_img {
@@ -497,17 +500,23 @@ button {
 .testimonila_inner {
     width: 100%;
     float: left;
-    background-color: #676766;
+    background-color: #ffffff;
     height: auto;
     margin-top: 90px;
     padding-bottom: 30px;
 }
 
-.testing_img {
+.testing_img_1 {
     width: 100%;
     float: left;
     position: relative;
-    top: -60px;
+    /*top: -60px;*/
+}
+.testing_img_2 {
+    width: 100%;
+    float: center;
+    position: relative;
+    /*top: -60px;*/
 }
 .helina_text{
 	width: 100%;
@@ -515,6 +524,7 @@ button {
 	font-size: 26px;
 	color: #ffffff;
 	padding-left: 130px;
+    
 	font-weight: 600;	
 }
 
@@ -522,7 +532,7 @@ button {
 	width: 95%;
 	float: left;
 	font-size: 14px;
-	color: #ffffff;
+	color: #000000;
 	padding-left: 130px;
 	margin-left: 0px;
 }
